--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -151,128 +151,63 @@ h5 {
 
 /* Your code starts here! */
 .container {
-  max-width: 1400px;
-  margin: 0 auto;
+  	max-width: 1400px;
+  	margin: 0 auto;
 }
 
-/* Navigation */
+/*Header*/
 
-.main-header .navbar {
+.mainHeader{
+	display:flex;
+	align-items:center;
+	width:100%;
+}
+
+.mainHeader .navbar {
 	width:100%;
 	display:flex;
 	align-items:center;
 	justify-content:space-between;
 }
 
-.main-header .navbar ul {
+.mainHeader .navbar ul {
 	display:flex;
 	justify-content:space-evenly;
 	width:60%;
 }
 
-
-.main-header .navbar ul li a {
+.mainHeader .navbar ul li a {
 	color:#ccc;
 	text-decoration:none;
 	font-size:20px;
 }
 
-.logo {
-	max-width:100%
-}
-
-/* Hero section */
-
-.main-header .caption-box{
+.service{
+	width:100%;
 	display:flex;
-	justify-content:space-evenly;
-	margin:50px 0 50px 0;
-}
-
-.main-header .caption {
- 	display:flex;
 	flex-direction:column;
-	align-items:center;
-	justify-content:space-evenly;
-	text-align:center;
-	margin: 20px 0 0 0 ;
+	justify-items:center;
 }
 
-.main-header .caption h1 {
-  font-size: 75px;
-}
 
-.main-header .caption a {
-  padding: 10px 20px 10px 20px;
-  border: #333 1px solid;
-  color: #333;
-  text-decoration: none;
-  margin: 0px 0 50px 1%;
-  font-size: 20px;
-}
 
-.main-header .header-img {
-	
-}
 
-/* Content section */
 
-.content-section .content-box-top {
-	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-}
 
-.content-section .feature{
-	width:48%;
-}
 
-.content-section .about{
-	width:48%;
-}
 
-.content-section .content-box h1 {
-  font-size: 30px;
-}
 
-.content-section .content-box p {
-  font-size: 18px;
-}
 
-.content-section .middle-img {
-  display: block;
-  margin: 0 auto;
-  width: 100%;
-}
 
-.content-section .content-box-bottom {
-  	display:flex;
-	flex-direction:row;
-	justify-content:space-between;
-}
 
-.content-section .service{
-	width:30%;
-}
 
-.content-section .product{
-	width:30%;
-}
 
-.content-section .vision{
-	width:30%;
-}
 
-/* Footer */
-footer h1 {
-  margin-top: 2%;
-}
 
-/* Margin-bottom */
-footer p {
-  margin-bottom: 2%;
-}
 
-footer .copyright {
-  text-align: center;
-}
+
+
+
+
+
+
